--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+:root{
+    --primary-color:#6F2DBD;
+    --body-color: white;
+    --secondary-color:#0F9CA9;
+
+}
 body{
     font-family: 'Roboto', sans-serif;
+    color:var(--primary-color);
+    background-color: var(--body-color);
 
 }
 
@@ -14,27 +22,47 @@ body{
 
 .hero{
     text-align: center;
-    margin: 3rem;
+    margin: 3rem 0rem 0rem 0rem;
     font-size: 45px;
     font-weight: bold;
 
+}
+hr{
+    margin: 1rem 3rem 3rem 3rem;
+    background-color: var(--secondary-color);
+    height: 1px;
+    
 }
 
 .container{
     
     text-align: center;
     
+    
 }
-.display-time{
+.display__circle{
+    height: 220px;
+    width: 220px;
+    border: 2px solid var(--secondary-color);
+    border-radius: 50%;
+    margin:auto;
+}
+.display__time{
+    
+    padding-top: 4.5rem;
     font-size: 35px;
     margin:1rem;
 
 }
 button{
-    height:30px;
-    width: 60px;
-    margin: 0.5rem;
-    border: 1px solid black;
-    border-radius: 10px;
+    height:40px;
+    width: 80px;
+    margin: 3rem 0.5rem 3rem 0.5rem;
+    border: 2px solid var(--secondary-color);
+    border-radius: 20px;
+    color: white;
+    background-color: var(--secondary-color);
+    font-size: medium;
+    font-weight: bolder;
     
 }
